# stm32-from-scratch

./: .gitignore  README.md
01-blink/: CMakeLists.txt  README.md  openocd.cfg
01-blink/inc/: stm32f1xx.h
01-blink/src/: main.c  startup_stm32f103c8tx.c
02-oled-i2c/: CMakeLists.txt  README.md
02-oled-i2c/inc/: stm32f1xx.h
02-oled-i2c/src/: main.c  ssd1306.c  system_stm32f1xx.c
03-motor-driver/: CMakeLists.txt  README.md
03-motor-driver/cmake/: arm-none-eabi.cmake
03-motor-driver/ld/: STM32F103C8TX_FLASH.ld
03-motor-driver/src/: main.c
04-bldc/: CMakeLists.txt
04-bldc/inc/: ssd1306.h  stm32f1xx.h
04-bldc/src/: main.c  system_stm32f1xx.c
05-freertos/: README.md  platformio.ini
05-freertos/inc/: FreeRTOSConfig.h
05-freertos/src/: main.c
cmake/: arm-none-eabi.cmake
